jquery version info removed from index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <link href="style.css" rel="stylesheet" type="text/css">
 
-<script type="text/javascript" src="jquery-1.4.3.min.js"></script>
+<script type="text/javascript" src="jquery.min.js"></script>
 <script type="text/javascript" src="main.js"></script>
 <script type="text/javascript" src="mapping.js"></script>
 <script type="text/javascript" src="events.js"></script>
